--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -54,9 +54,16 @@
     &__user-info {
       width: 100%;
       height: 12%;
+      padding: 10px;
 
       display: flex;
       flex-direction: row;
+
+      align-items: center;
+
+      h2 {
+        font-weight: bolder;
+      }
     }
     
     &__action-btns {
@@ -69,10 +76,32 @@
         height: 100%;
         width: 50%;
 
+        cursor: pointer;
+
+        transition: background-color 0.3s;
+
+        border-top: 1px solid lightgray;
+
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
+      }
+
+      div:nth-child(1) {
+        border-right: 0.5px solid lightgray;
+
+        &:hover {
+          background-color: rgb(233, 62, 62);
+        }
+      }
+
+      div:nth-child(2) {
+        border-left: 0.5px solid lightgray;
+
+        &:hover {
+          background-color: rgb(43, 231, 43);
+        }
       }
     }
   }
