--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,7 +12,7 @@
     width: 40%;
     max-width: 500px;
     min-width: 325px;
-    height: 95%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,7 +29,7 @@
 
     &__intro {
       width: 100%;
-      height: 15%;
+      height: 11%;
       display: flex;
       flex-direction: row;
       justify-content: center;
@@ -68,7 +68,7 @@
     
     &__action-btns {
       width: 100%;
-      height: 8%;
+      height: 6%;
       display: flex;
       flex-direction: row;
 
@@ -102,6 +102,24 @@
         &:hover {
           background-color: rgb(43, 231, 43);
         }
+      }
+    }
+
+    &__history-btn {
+      width: 100%;
+      height: 6%;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      cursor: pointer;
+
+      border-top: 1px solid lightgray;
+
+      &:hover {
+        background-color: darkseagreen;
       }
     }
   }
