--- a/src/components/history-card/history-card.scss
+++ b/src/components/history-card/history-card.scss
@@ -2,16 +2,25 @@
 
 .history-card {
   width: 100%;
-  height: 80px;
+  height: 150px;
 
   padding: 10px;
 
   display: flex;
   flex-direction: row;
+  background-color: aliceblue;
+
+  margin-top: 10px;
 
   &__picture {
-    width: 60px;
-    height: 60px;
+    width: 120px;
+    height: 120px;
+
+    margin-right: 20px;
+
+    img {
+      border-radius: 30%;
+    }
   }
 
   &__info {
@@ -19,5 +28,9 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+
+    h3 {
+      font-weight: bolder;
+    }
   }
 }
