--- a/src/pages/history/history.scss
+++ b/src/pages/history/history.scss
@@ -12,8 +12,7 @@
     width: 40%;
     max-width: 500px;
     min-width: 325px;
-    height: 100%;
-    padding: 10px;
+    height: 95%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,20 +20,35 @@
 
     &__loading {
       width: 100%;
-      height: 100%;
+      height: 88%;
       display: flex;
       flex-direction: row;
       justify-content: center;
       align-items: center;
     }
 
-    &load-more {
+    &__load-more {
       width: 100%;
+      height: 11%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      padding: 10px;
+
+      transition: background-color 0.3s;
+
+      &:hover {
+        background-color: lightskyblue;
+      }
     }
 
     &__list {
       width: 100%;
-      height: 100%;
+      height: 77%;
+      padding: 10px;
+
+      overflow-y: auto;
 
       display: flex;
       flex-direction: column;
@@ -43,12 +57,69 @@
 
       &--no-data {
         width: 100%;
-        height: 100%;
+        height: 77%;
 
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+      }
+    }
+
+    &__filter-btns {
+      width: 100%;
+      height: 6%;
+      display: flex;
+      flex-direction: row;
+
+      div {
+        height: 100%;
+        width: 50%;
+
+        cursor: pointer;
+
+        transition: background-color 0.3s;
+
+        border-top: 1px solid lightgray;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+      }
+
+      div:nth-child(1) {
+        border-right: 0.5px solid lightgray;
+
+        &:hover {
+          background-color: rgb(233, 62, 62);
+        }
+      }
+
+      div:nth-child(2) {
+        border-left: 0.5px solid lightgray;
+
+        &:hover {
+          background-color: rgb(43, 231, 43);
+        }
+      }
+    }
+
+    &__back-btn {
+      width: 100%;
+      height: 6%;
+
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+
+      cursor: pointer;
+
+      border-top: 1px solid lightgray;
+
+      &:hover {
+        background-color: darkseagreen;
       }
     }
   }
